# artik-sdk

./: .travis.yml  CMakeLists.txt  Makefile  README.md
.travis/xenial-arm64/: Dockerfile
.travis/xenial-armhf/: Dockerfile
debian/: changelog  control  libartik-sdk-base-dev.install  libartik-sdk-base.install  libartik-sdk-bluetooth-dev.install  libartik-sdk-bluetooth.install  libartik-sdk-connectivity-dev.install  libartik-sdk-connectivity.install  libartik-sdk-lwm2m-dev.install  libartik-sdk-lwm2m.install  libartik-sdk-media-dev.install  libartik-sdk-media.install  libartik-sdk-mqtt-dev.install  libartik-sdk-mqtt.install  libartik-sdk-sensor-dev.install  libartik-sdk-sensor.install  libartik-sdk-systemio-dev.install  libartik-sdk-systemio.install  libartik-sdk-tests.install  libartik-sdk-wifi-dev.install  libartik-sdk-wifi.install  libartik-sdk-zigbee-dev.install  libartik-sdk-zigbee.install  rules
doc/: Doxyfile  changelog.dox  mainpage.dox
inc/base/: artik_list.h  artik_platform.h  artik_security.h  artik_ssl.h
inc/bluetooth/: artik_bluetooth.h
inc/connectivity/: artik_cloud.h
inc/sensor/: artik_platform_sensors.h
inc/systemio/: artik_serial.h
inc/wifi/: artik_wifi.h
pkgconfig/: libartik-sdk-base.pc.cmake  libartik-sdk-bluetooth.pc.cmake  libartik-sdk-connectivity.pc.cmake  libartik-sdk-lwm2m.pc.cmake  libartik-sdk-media.pc.cmake  libartik-sdk-mqtt.pc.cmake  libartik-sdk-sensor.pc.cmake  libartik-sdk-systemio.pc.cmake  libartik-sdk-wifi.pc.cmake  libartik-sdk-zigbee.pc.cmake
scripts/: update_version.sh
specs/: libartik-sdk.spec
src/modules/base/: CMakeLists.txt
src/modules/base/loop/: linux_loop.c
src/modules/base/loop/cpp/: artik_loop.cpp
src/modules/base/module/: linux_module.c  tinyara_module.c
src/modules/base/security/: artik_security.c  linux_security.c  os_security.h  tinyara_security.c
src/modules/base/security/cpp/: artik_security.cpp
src/modules/base/time/: linux_time.c
src/modules/base/time/cpp/: artik_time.cpp
src/modules/connectivity/: CMakeLists.txt
src/modules/connectivity/cloud/: artik_cloud.c
src/modules/connectivity/cloud/cpp/: artik_cloud.cpp
src/modules/connectivity/http/: common_http.c  common_http.h  linux_http.c  tinyara_http.c
src/modules/connectivity/http/tinyara/: webclient.c
src/modules/connectivity/network/: artik_network.c  linux_network.c  tinyara_network.c
src/modules/connectivity/network/cpp/: artik_network.cpp
src/modules/connectivity/network/linux/netutils/: dhcpc.c  dhcpd.c  dhcpd.h  netlib.c
src/modules/connectivity/network/tinyara/: dns_utils.c  dns_utils.h
src/modules/connectivity/websocket/: linux_websocket.c  tinyara_websocket.c
src/modules/connectivity/websocket/cpp/: artik_websocket.cpp
test/adc_test/: CMakeLists.txt
test/bluetooth_test/: CMakeLists.txt  artik_bluetooth_test.c  artik_bluetooth_test_advertiser.c  artik_bluetooth_test_agent.c  artik_bluetooth_test_avrcp.c  artik_bluetooth_test_commandline.c  artik_bluetooth_test_ftp.c  artik_bluetooth_test_gatt_client.c  artik_bluetooth_test_gatt_server.c  artik_bluetooth_test_hrp_collector.c  artik_bluetooth_test_hrp_sensor.c  artik_bluetooth_test_ibeacon.c  artik_bluetooth_test_nap.c  artik_bluetooth_test_observer.c  artik_bluetooth_test_panu.c  artik_bluetooth_test_pxp_monitor.c  artik_bluetooth_test_spp.c  artik_bluetooth_test_spp_client.c  artik_bluetooth_test_unit.c  artik_bluetooth_test_unit_avrcp.c  artik_bluetooth_test_unit_ftp.c  artik_bluetooth_test_unit_nap.c  artik_bluetooth_test_unit_panu.c  artik_bluetooth_test_unit_spp.c
test/cloud_test/: CMakeLists.txt  artik_cloud_test.c
test/gpio_test/: CMakeLists.txt  artik_gpio_test.c
test/http_test/: CMakeLists.txt  artik_http_openssl_test.c  artik_http_test.c
test/i2c_test/: CMakeLists.txt  artik_i2c_test.c
test/layercpp_test/: CMakeLists.txt  artik_cloud_test.cpp  artik_pwm_test.cpp  artik_security_test.cpp  artik_sensor_test.cpp  artik_serial_test.cpp
test/loop_test/: CMakeLists.txt  artik_loop_test.c
test/lwm2m_test/: CMakeLists.txt  artik_lwm2m_test_client.c
test/media_test/: CMakeLists.txt
test/module_test/: CMakeLists.txt  artik_module_test.c
test/mqtt_test/: CMakeLists.txt  artik_mqtt_cloud_test.c
test/network_test/: CMakeLists.txt  artik_network_test.c
test/pwm_test/: CMakeLists.txt  artik_pwm_test.c
test/sdr_test/: CMakeLists.txt  artik_sdr_test.c
test/security_test/: CMakeLists.txt  artik_security_test.c  pkcs7_sig_verify.c
test/sensor_test/: CMakeLists.txt
test/serial_test/: CMakeLists.txt  artik_serial_test.c
test/spi_test/: CMakeLists.txt  artik_spi_test.c
test/time_test/: CMakeLists.txt
test/websocket_test/: CMakeLists.txt  artik_websocket_client_test.c  (+1 more)
(+86 files in other folders)
